--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body{
-  text-align: center;  
+body {
+  text-align: center;
+}
+
+#myCanvas {
+  border-width: 10px;
+  background-color: white;
+  border-style: ridge;
 }
